--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,12 +6,22 @@
 
 {% block body %}
     <h1>
-        Home
+        August M. Rosenqvist (auro17)
     </h1>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor,
-        nisl eget ultricies tincidunt, nisl nisl aliquet nisl, nec
-
-        tincidunt nisl nisl vel nisl. N
-    </p>
+    <div>
+        <div>
+            <img src="{{ asset('img/profile.jpg') }}" alt="My Photo" />
+        </div>
+        <div>
+            <p>
+                Hi, my name is August and I'm a junior developer based in
+                Stockholm, Sweden. I am currently finishing up my studies and
+                developing applications using various technologies such as
+                Symfony, React, and Node. I'm also passionate about creating &
+                playing music. I also like flying drones and ride my motorcycle
+                in my freetime aswell. I do love software though, and enjoy
+                tinkering with small programming projects in my freetime.
+            </p>
+        </div>
+    </div>
 {% endblock %}
