--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,16 +1,38 @@
+:root {
+    --primary-color: #007aff;
+    --secondary-color: #f7f7f7;
+    --tertiary-color: #fff;
+    --quaternary-color: #333;
+    --quinary-color: #ddd;
+    --senary-color: #ccc;
+    --system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 body {
     margin: 0 auto;
-    max-width: 400px;
-    background-color: rgb(79, 79, 79);
-    color: #fff;
+    max-width: 800px;
+    background-color: var(--secondary-color);
+    color: var(--quaternary-color);
+    font-family: var(--system-font);
+}
+
+header {
+    padding: 20px;
+    background-color: var(--tertiary-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-    border-bottom: 4px double #ccc;
+    border-bottom: 4px double var(--quinary-color);
+    font-weight: bold;
+    font-size: 24px;
 }
 
 nav {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--senary-color);
+    background-color: var(--secondary-color);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
 nav ul {
@@ -21,4 +43,32 @@ nav ul {
 nav ul li {
     display: inline;
     margin: 0 10px;
+    font-size: 16px;
+}
+
+nav ul li a {
+    color: var(--quaternary-color);
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+
+nav ul li a {
+    transition: all 0.3s ease-in-out;
+}
+
+nav ul li a:hover {
+    transform: scale(1.1);
+}
+
+@media screen and (max-width: 600px) {
+    nav ul li {
+        display: block;
+        margin: 10px auto;
+        text-align: center;
+        font-size: 18px;
+    }
 }
