--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,23 +21,32 @@ header {
     padding: 20px;
     background-color: var(--tertiary-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 h1 {
     border-bottom: 4px double var(--quinary-color);
     font-weight: bold;
     font-size: 24px;
+    margin: 0;
 }
 
 nav {
     border-bottom: 1px solid var(--senary-color);
     background-color: var(--secondary-color);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
 
 nav ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 
 nav ul li {
@@ -65,9 +74,14 @@ nav ul li a:hover {
 }
 
 @media screen and (max-width: 600px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     nav ul li {
         display: block;
-        margin: 10px auto;
+        margin: 10px 0;
         text-align: center;
         font-size: 18px;
     }
