--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -11,7 +11,10 @@
     <p>
         An image which can be clicked on.
     </p>
-    <a href="{{ asset('img/glider.svg') }}">
-        <img src="{{ asset('img/glider.svg') }}" alt="" />
+    <a href="https://github.com/dbwebb-se/mvc">
+        <img src="{{ asset('img/mvc.png') }}" alt="mvc leaf logo" />
+        Course GitHub Repo
     </a>
+
+    <a></a>
 {% endblock %}
