--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
     <body>
         <header class="site-header"
             style="background-image: url({{ asset('img/background.jpg') }})">
-            <span class="site-title">My Symfony Site</span>
+            <span class="site-title">mvc auro17</span>
         </header>
         <nav>
             <ul>
