--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h1>
-        August M. Rosenqvist (auro17)
+        August M. Rosenqvist
     </h1>
     <div>
         <div>
@@ -15,12 +15,16 @@
         <div>
             <p>
                 Hi, my name is August and I'm a junior developer based in
-                Stockholm, Sweden. I am currently finishing up my studies and
-                developing applications using various technologies such as
-                Symfony, React, and Node. I'm also passionate about creating &
-                playing music. I also like flying drones and ride my motorcycle
-                in my freetime aswell. I do love software though, and enjoy
-                tinkering with small programming projects in my freetime.
+                Stockholm, Sweden.
+                <br /><br />
+                I am currently finishing up my studies and developing applications
+                using various technologies such as Symfony, React, and Node.
+                <br /><br />
+                I'm also passionate about creating & playing music. I also like flying
+                drones and ride my motorcycle in my freetime aswell.
+                <br /><br />
+                I do love software though, and enjoy tinkering with small programming
+                projects in my freetime.
             </p>
         </div>
     </div>
