--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -24,13 +24,14 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
 }
 
 h1 {
     border-bottom: 4px double var(--quinary-color);
     font-weight: bold;
-    font-size: 24px;
-    margin: 0;
+    font-size: 36px;
+    margin: 20px 0;
 }
 
 nav {
@@ -41,6 +42,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
+    border-radius: 0 0 5px 5px;
 }
 
 nav ul {
@@ -62,7 +64,6 @@ nav ul li a {
 
 nav ul li a:hover {
     color: var(--primary-color);
-    text-decoration: underline;
 }
 
 nav ul li a {
