--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -19,25 +19,65 @@ body {
 
 header {
     padding: 20px;
-    background-color: var(--tertiary-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: white;
 }
 
+.shadowed {
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.125);
+    border-radius: 0 0 5px 5px;
+}
+
+.profile {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.207);
+    border: 1px solid var(--quinary-color);
+}
+
+.center {
+    text-align: center;
+}
+
 h1 {
-    border-bottom: 4px double var(--quinary-color);
     font-weight: bold;
     font-size: 36px;
     margin: 20px 0;
 }
 
+h1.title {
+    display: inline-block;
+    position: relative;
+    text-align: center;
+}
+
+h1.title::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -4px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 40px);
+    border-bottom: 4px double var(--quinary-color);
+}
+
+.broadText {
+    font-size: 18px;
+    line-height: 1.1;
+}
+
+.aboutText {
+    padding: 10px 100px;
+}
+
 nav {
     border-bottom: 1px solid var(--senary-color);
     background-color: var(--secondary-color);
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
