--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,7 +4,7 @@
     Home
 {% endblock %}
 
-{% block body %}
+{% block content %}
     <div class="center">
         <h1 class="title">
             August M. Rosenqvist
@@ -17,7 +17,7 @@
                 alt="My Photo" />
         </div>
         <div class="aboutText">
-            <p class="broadText">
+            <p>
                 Hi, my name is August and I'm a junior developer based in
                 Stockholm, Sweden.
                 <br /><br />
