--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         </title>
         <link rel="icon"
             href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>" />
-        <link rel="icon" href="{{ asset('img/glider.svg') }}" />
+        <link rel="icon" href="{{ asset('img/favicon.png') }}" />
 
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
@@ -21,28 +21,44 @@
         {% endblock %}
     </head>
     <body>
-        <div class="shadowed">
-            <header class="site-header"
+        <header class="shadowed">
+            <div class="site-header"
                 style="background-image: url({{
                 asset(
                     'img/background.jpg'
                 )
                 }})">
                 <span class="site-title">mvc auro17</span>
-            </header>
+            </div>
             <nav>
                 <ul>
                     <li><a href="{{ path('home') }}">Home</a></li>
                     <li><a href="{{ path('about') }}">About</a></li>
-                    <li>
-                        <a href="{{ path('lucky_number') }}">Lucky number</a>
-                    </li>
+                    <li><a href="{{ path('report') }}">Report</a></li>
+                    <li><a href="{{ path('lucky') }}">Lucky</a></li>
                 </ul>
             </nav>
-        </div>
+        </header>
 
-        {% block body %}
+        <main>
+            <section id="content">
+                {% block content %}
 
-        {% endblock %}
+                {% endblock %}
+            </section>
+            {% block sidebar %}
+
+            {% endblock %}
+        </main>
+
+        <footer>
+            <hr />
+            <div class="footer-left">
+                &copy; 2023 by <a href="https://arweb.dev">ARWeb</a>.
+            </div>
+            <div class="footer-right">
+                <a href="mailto:contact@arweb.dev">Contact</a>
+            </div>
+        </footer>
     </body>
 </html>
