--- a/templates/lucky_number.html.twig
+++ b/templates/lucky_number.html.twig
@@ -1,9 +1,29 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Magic number{% endblock %}
+{% block title %}
+    Magic number
+{% endblock %}
 
-{% block body %}
-    <h1>Magic number</h1>
-    <p>Welcome to my awesome magical homepage.</p>
-    <p>This is the current magic number: {{ number }}</p>
+{% block content %}
+    <h1>
+        Lucky You
+    </h1>
+    <p>
+        You roll a dice... and you got a: {{ number }}!
+    </p>
+    <img src="img/dice/{{ number }}.png" class="dice" />
+
+    {% if number == 6 %}
+        <p>
+            Here's a random cat picture for you, since you're so lucky:
+        </p>
+
+        <img src="https://cataas.com/cat?wi=100"
+            alt="cat picture"
+            class="cat" />
+    {% else %}
+        <p>
+            ...you're not so lucky, are you?
+        </p>
+    {% endif %}
 {% endblock %}
