--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -199,6 +199,9 @@ footer {
     padding: 10px;
     font-size: 14px;
     margin-top: auto;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.052);
+    border-radius: 5px 5px 0 0;
+    border: 1px solid var(--quinary-color);
     a {
         color: #333;
         text-decoration: none;
