--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
         <footer>
             <hr />
             <div class="footer-left">
-                &copy; 2023 by <a href="https://arweb.dev">ARWeb</a>.
+                &copy; 2023 by <a href="https://arweb.dev">ARWeb</a>
             </div>
             <div class="footer-right">
                 <a href="mailto:contact@arweb.dev">Contact</a>
