--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,7 @@
                     <li><a href="{{ path('about') }}">About</a></li>
                     <li><a href="{{ path('report') }}">Report</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
+                    <li><a href="{{ path('quote') }}">Quotes</a></li>
                 </ul>
             </nav>
         </header>
