--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -13,35 +13,63 @@
             Kmom01
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            tristique felis dolor. Suspendisse accumsan tellus ac neque tempor
-            scelerisque. Duis dictum diam in nisl molestie vulputate. Donec
-            interdum odio vitae scelerisque blandit. Vestibulum enim dolor,
-            ornare at dui in, venenatis convallis sapien. Vestibulum ullamcorper
-            eu lectus quis lacinia. Praesent id fringilla ligula, ut tincidunt
-            purus. Fusce viverra metus ac lacinia eleifend. Morbi vehicula enim
-            eget est accumsan, ac porttitor justo iaculis.
+            <strong>
+                &bull; Berätta kort om dina förkunskaper och tidigare
+                erfarenheter kring objektorientering.
+            </strong>
             <br /><br />
-            Morbi magna elit, commodo et nunc ac, malesuada mollis est. Quisque mattis
-            venenatis nunc, quis varius leo tristique eget. Sed non urna condimentum,
-            sagittis dui sed, pulvinar sapien. Aliquam vitae maximus metus. Phasellus
-            vitae ligula quam. Sed ac nisi quis massa rutrum vulputate. Duis eu convallis
-            libero. Pellentesque faucibus aliquet eros bibendum faucibus. Suspendisse
-            et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
-            Quisque in tincidunt urna, ut venenatis elit.
+
+            - Jag har inte så mycket tidigare erfarenheter vad det gäller just
+            objektorientering förutom diverse tidigare kurser i programmering.
+
+            <br /><br /><br />
+
+            <strong>
+                &bull; Berätta kort om PHPs modell för klasser och objekt. Vilka
+                är de grunder man behöver veta/förstå för att kunna komma igång
+                och skapa sina första klasser?
+            </strong>
             <br /><br />
-            Suspendisse lacinia quam et risus mattis, sed finibus orci venenatis.
-            Mauris sodales placerat auctor. Integer vitae odio ante. Nam volutpat,
-            enim ac maximus posuere, tellus augue interdum sem, eu congue lorem turpis
-            a libero. Mauris iaculis turpis vitae sapien fringilla malesuada. Ut
-            lobortis, justo ut convallis fringilla, mauris lacus tempus magna, sed
-            vulputate justo lorem vitae orci. Sed pellentesque magna vitae posuere
-            facilisis. Vestibulum porttitor mollis arcu. Etiam nunc risus, venenatis
-            id ornare vitae, ornare at justo. Praesent imperdiet venenatis mi, vitae
-            volutpat turpis imperdiet non. Nulla tempor luctus auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            Mauris rhoncus, magna at laoreet egestas, enim lacus pellentesque enim,
-            id luctus neque lectus ac erat. Ut porta neque sed cursus vestibulum.
+
+            - En klass är en mall som definierar egenskaper och beteenden för
+            objekt. Objekt är konkreta förekomster av en viss klass och skapas
+            utifrån dess mall. Användning av klasser och objekt möjliggör
+            återanvändning och strukturerad kod.
+            <br /><br /><br />
+
+            <strong>
+                &bull; Reflektera kort över den kodbas, koden, strukturen som
+                användes till uppgiften me/report, hur uppfattar du den?
+            </strong>
+            <br /><br />
+
+            - Koden var lätt att förstå och välstrukturerad med välkända
+            designmönster på lämpligt sätt. Vissa utmaningar uppstod dock vid
+            förståelsen av instruktionerna till Symfony. Ibland ville saker inte
+            fungera direkt, som tänkt.
+
+            <br /><br /><br />
+
+            <strong>
+                &bull; Med tanke på artikeln “PHP The Right Way”, vilka delar in
+                den finner du extra intressanta och värdefulla? Är det några
+                särskilda områden som du känner att du vill veta mer om? Lyft
+                fram några delar av artikeln som du känner mer värdefulla.
+            </strong>
+            <br /><br />
+
+            - Jag tycker att security delen verkar mest intressant.
+
+            <br /><br /><br />
+
+            <strong>&bull; Vilken är din TIL för detta kmom?</strong>
+            <br /><br />
+
+            - Jag har lärt mig mer om Symfony, Composer och PHP generellt. Jag
+            har också lärt mig mer om objektorientering som begrepp och vad det
+            innebär.
+
+            <br /><br /><br />
         </p>
     </article>
 
@@ -67,18 +95,6 @@
             et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
             Quisque in tincidunt urna, ut venenatis elit.
             <br /><br />
-            Suspendisse lacinia quam et risus mattis, sed finibus orci venenatis.
-            Mauris sodales placerat auctor. Integer vitae odio ante. Nam volutpat,
-            enim ac maximus posuere, tellus augue interdum sem, eu congue lorem turpis
-            a libero. Mauris iaculis turpis vitae sapien fringilla malesuada. Ut
-            lobortis, justo ut convallis fringilla, mauris lacus tempus magna, sed
-            vulputate justo lorem vitae orci. Sed pellentesque magna vitae posuere
-            facilisis. Vestibulum porttitor mollis arcu. Etiam nunc risus, venenatis
-            id ornare vitae, ornare at justo. Praesent imperdiet venenatis mi, vitae
-            volutpat turpis imperdiet non. Nulla tempor luctus auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            Mauris rhoncus, magna at laoreet egestas, enim lacus pellentesque enim,
-            id luctus neque lectus ac erat. Ut porta neque sed cursus vestibulum.
         </p>
     </article>
 
@@ -104,18 +120,6 @@
             et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
             Quisque in tincidunt urna, ut venenatis elit.
             <br /><br />
-            Suspendisse lacinia quam et risus mattis, sed finibus orci venenatis.
-            Mauris sodales placerat auctor. Integer vitae odio ante. Nam volutpat,
-            enim ac maximus posuere, tellus augue interdum sem, eu congue lorem turpis
-            a libero. Mauris iaculis turpis vitae sapien fringilla malesuada. Ut
-            lobortis, justo ut convallis fringilla, mauris lacus tempus magna, sed
-            vulputate justo lorem vitae orci. Sed pellentesque magna vitae posuere
-            facilisis. Vestibulum porttitor mollis arcu. Etiam nunc risus, venenatis
-            id ornare vitae, ornare at justo. Praesent imperdiet venenatis mi, vitae
-            volutpat turpis imperdiet non. Nulla tempor luctus auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            Mauris rhoncus, magna at laoreet egestas, enim lacus pellentesque enim,
-            id luctus neque lectus ac erat. Ut porta neque sed cursus vestibulum.
         </p>
     </article>
 
@@ -141,18 +145,6 @@
             et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
             Quisque in tincidunt urna, ut venenatis elit.
             <br /><br />
-            Suspendisse lacinia quam et risus mattis, sed finibus orci venenatis.
-            Mauris sodales placerat auctor. Integer vitae odio ante. Nam volutpat,
-            enim ac maximus posuere, tellus augue interdum sem, eu congue lorem turpis
-            a libero. Mauris iaculis turpis vitae sapien fringilla malesuada. Ut
-            lobortis, justo ut convallis fringilla, mauris lacus tempus magna, sed
-            vulputate justo lorem vitae orci. Sed pellentesque magna vitae posuere
-            facilisis. Vestibulum porttitor mollis arcu. Etiam nunc risus, venenatis
-            id ornare vitae, ornare at justo. Praesent imperdiet venenatis mi, vitae
-            volutpat turpis imperdiet non. Nulla tempor luctus auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            Mauris rhoncus, magna at laoreet egestas, enim lacus pellentesque enim,
-            id luctus neque lectus ac erat. Ut porta neque sed cursus vestibulum.
         </p>
     </article>
 
@@ -178,18 +170,6 @@
             et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
             Quisque in tincidunt urna, ut venenatis elit.
             <br /><br />
-            Suspendisse lacinia quam et risus mattis, sed finibus orci venenatis.
-            Mauris sodales placerat auctor. Integer vitae odio ante. Nam volutpat,
-            enim ac maximus posuere, tellus augue interdum sem, eu congue lorem turpis
-            a libero. Mauris iaculis turpis vitae sapien fringilla malesuada. Ut
-            lobortis, justo ut convallis fringilla, mauris lacus tempus magna, sed
-            vulputate justo lorem vitae orci. Sed pellentesque magna vitae posuere
-            facilisis. Vestibulum porttitor mollis arcu. Etiam nunc risus, venenatis
-            id ornare vitae, ornare at justo. Praesent imperdiet venenatis mi, vitae
-            volutpat turpis imperdiet non. Nulla tempor luctus auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            Mauris rhoncus, magna at laoreet egestas, enim lacus pellentesque enim,
-            id luctus neque lectus ac erat. Ut porta neque sed cursus vestibulum.
         </p>
     </article>
 
@@ -215,18 +195,6 @@
             et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
             Quisque in tincidunt urna, ut venenatis elit.
             <br /><br />
-            Suspendisse lacinia quam et risus mattis, sed finibus orci venenatis.
-            Mauris sodales placerat auctor. Integer vitae odio ante. Nam volutpat,
-            enim ac maximus posuere, tellus augue interdum sem, eu congue lorem turpis
-            a libero. Mauris iaculis turpis vitae sapien fringilla malesuada. Ut
-            lobortis, justo ut convallis fringilla, mauris lacus tempus magna, sed
-            vulputate justo lorem vitae orci. Sed pellentesque magna vitae posuere
-            facilisis. Vestibulum porttitor mollis arcu. Etiam nunc risus, venenatis
-            id ornare vitae, ornare at justo. Praesent imperdiet venenatis mi, vitae
-            volutpat turpis imperdiet non. Nulla tempor luctus auctor. Class aptent
-            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-            Mauris rhoncus, magna at laoreet egestas, enim lacus pellentesque enim,
-            id luctus neque lectus ac erat. Ut porta neque sed cursus vestibulum.
         </p>
     </article>
 {% endblock %}
