--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -21,6 +21,8 @@
 
             - Jag har inte så mycket tidigare erfarenheter vad det gäller just
             objektorientering förutom diverse tidigare kurser i programmering.
+            Jag har sysslat litegrann med objekt med JavaScript i olika
+            sammanhang.
 
             <br /><br /><br />
 
@@ -58,8 +60,22 @@
             </strong>
             <br /><br />
 
-            - Jag tycker att security delen verkar mest intressant.
-
+            - Det som verkligen tilltalar mig med "PHP The Right Way"-artikeln
+            är avsnittet om säkerhet. Jag anser att säkerhet är en absolut
+            grundläggande och avgörande aspekt inom webbutveckling, eftersom den
+            har en direkt påverkan på användarnas integritet. Genom att använda
+            bästa praxis inom säkerhet kan man skydda webbapplikationer från
+            attacker och garantera att användardata hanteras på ett ansvarsfullt
+            sätt.
+            <br /><br />
+            Avsnittet täcker ämnen som webbapplikationssäkerhet, lösenordshashning
+            och datafiltrering och är därför särskilt intressant för mig. Jag anser
+            att dessa ämnen är grundläggande och viktiga för att säkra både webbapplikationer
+            och användardata. Genom att ha en god förståelse av dessa ämnen kan man
+            minska risken för attacker och skydda användarnas data på ett mer effektivt
+            sätt. Jag skulle i synnerhet vilja veta mer om SQL Injection, Cross-Site
+            Scripting, Local/Remote File Inclusion samt olika vägar att skydda sig
+            mot dessa.
             <br /><br /><br />
 
             <strong>&bull; Vilken är din TIL för detta kmom?</strong>
@@ -67,7 +83,8 @@
 
             - Jag har lärt mig mer om Symfony, Composer och PHP generellt. Jag
             har också lärt mig mer om objektorientering som begrepp och vad det
-            innebär.
+            innebär. Jag har också lärt mig litegrann om säkerhet vad det gäller
+            PHP.
 
             <br /><br /><br />
         </p>
