--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,7 +11,7 @@
 
 body {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 900px;
     background-color: var(--secondary-color);
     color: var(--quaternary-color);
     font-family: var(--system-font);
@@ -119,10 +119,65 @@ nav {
                 transition: all 0.3s ease-in-out;
                 &:hover {
                     color: var(--primary-color);
-                    transform: scale(1.1);
                 }
             }
         }
+    }
+}
+
+.dropdown {
+    display: inline-block;
+    position: relative;
+    appearance: none;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 0.5rem;
+    font-size: 1rem;
+    color: #333;
+    cursor: pointer;
+    &:hover {
+        color: var(--primary-color);
+        border-color: var(--primary-color);
+    }
+    &::after {
+        content: "";
+        border: 5px solid transparent;
+        border-top: 5px solid #333;
+        margin-left: 2px;
+        margin-bottom: 1px;
+        display: inline-block;
+        vertical-align: bottom;
+    }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: #fff;
+        border: 1px solid #d4d4d4;
+        border-radius: 5px;
+        box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
+        z-index: 1;
+        width: 200px;
+        overflow: hidden;
+        border-radius: 0.5rem;
+        a {
+            display: block;
+            color: #000;
+            padding: 0.5rem;
+            text-decoration: none;
+            font-weight: 500;
+            &:hover {
+                color: #fff;
+                background-color: var(--primary-color);
+                transition: background-color 0.2s ease-in-out;
+            }
+        }
+    }
+    &:hover .dropdown-content {
+        display: block;
     }
 }
 
@@ -135,6 +190,111 @@ nav {
             margin: 10px 0;
             text-align: center;
             font-size: 18px;
+        }
+    }
+}
+
+.button {
+    background-color: #f5f5f5;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    color: #333;
+    padding: 0.25rem 0.75rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 500;
+    margin: 0.5rem 0;
+    cursor: pointer;
+    border-radius: 0.5rem;
+    appearance: none;
+    -webkit-appearance: none;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    &:hover {
+        background-color: #e0e0e0;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border-color: rgba(0, 0, 0, 0.3);
+    }
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 4px rgba(38, 128, 235, 0.5);
+    }
+    &:active {
+        background-color: #d0d0d0;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    }
+
+    &.primary {
+        background-color: var(--primary-color);
+        color: #fff;
+        &:hover {
+            background-color: #0068e2; /* Darker blue */
+        }
+        &:active {
+            background-color: #0052cc; /* Even darker blue */
+        }
+    }
+    &.danger {
+        background-color: #f44336; /* Red */
+        color: #fff;
+        &:hover {
+            background-color: #e53935; /* Darker red */
+        }
+        &:active {
+            background-color: #d32f2f; /* Even darker red */
+        }
+    }
+}
+
+input[type="number"] {
+    background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    color: #333;
+    padding: 0.25rem 0.5rem;
+    font-size: 1rem;
+    font-weight: 500;
+    border-radius: 0.5rem;
+    appearance: none;
+    -webkit-appearance: none;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    &:hover {
+        background-color: #f5f5f5;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border-color: rgba(0, 0, 0, 0.3);
+    }
+    &:focus {
+        outline: none;
+        box-shadow: 0 0 4px rgba(38, 128, 235, 0.5);
+        border-color: rgba(38, 128, 235, 0.6);
+    }
+    &:active {
+        background-color: #f5f5f5;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    }
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+        -webkit-appearance: inner-spin-button;
+        opacity: 1;
+        border-radius: 5px;
+        border-left: 1px solid rgba(0, 0, 0, 0.1);
+    }
+    &:hover::-webkit-inner-spin-button,
+    &:hover::-webkit-outer-spin-button {
+        opacity: 1;
+        background-color: rgba(0, 122, 255, 0.1);
+    }
+    &:active::-webkit-inner-spin-button,
+    &:active::-webkit-outer-spin-button {
+        background-color: rgba(0, 122, 255, 0.2);
+    }
+    &::-webkit-inner-spin-button {
+        color: #007aff;
+        &:focus {
+            outline: none;
+            box-shadow: 0 0 4px rgba(0, 122, 255, 0.5);
+            border-color: rgba(0, 122, 255, 0.6);
         }
     }
 }
@@ -177,6 +337,10 @@ nav {
     }
 }
 
+.die {
+    font-size: 5em;
+}
+
 .cat {
     display: inline-block;
     position: relative;
@@ -216,5 +380,32 @@ footer {
         margin: 10px 0;
         border: none;
         border-top: 1px solid #ccc;
+    }
+}
+
+.flash {
+    padding: 0.5em 1em;
+    border: 1px solid transparent;
+    border-radius: 0.5rem;
+    margin: 0.5em 0;
+    font-weight: 500;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    &.flash-notice {
+        color: #004085;
+        background-color: #cce5ff;
+        border-color: #b8daff;
+        &::before {
+            content: "ⓘ";
+            margin-right: 0.5em;
+        }
+    }
+    &.flash-warning {
+        color: #856404;
+        background-color: #fff3cd;
+        border-color: #ffeeba;
+        &::before {
+            content: "⚠";
+            margin-right: 0.5em;
+        }
     }
 }
