--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,6 +37,14 @@
                     <li><a href="{{ path('report') }}">Report</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
                     <li><a href="{{ path('quote') }}">Quotes</a></li>
+                    <li>
+                        <div class="dropdown">
+                            Games<div class="dropdown-content">
+                                <a href="{{ path('pig_start') }}">Pig</a>
+                                <a href="{{ path('card_start') }}">Card Game</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </header>
