--- a/templates/card/init.html.twig
+++ b/templates/card/init.html.twig
@@ -21,10 +21,7 @@
                 min="1"
                 max="52"
                 required />
-        </div>
-        <br />
-        <div>
-            <button type="submit">Start Game</button>
+            <button class="button primary" type="submit">Start Game</button>
         </div>
     </form>
 {% endblock %}
