--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -409,3 +409,54 @@ footer {
         }
     }
 }
+
+.card {
+    display: inline-block;
+    width: 50px;
+    height: 70px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.55);
+    border-radius: 8px;
+    text-align: center;
+    line-height: 70px;
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 20px;
+    margin: 5px;
+    position: relative;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.15s ease-in-out; /* added transition for smooth effect */
+    cursor: pointer;
+
+    &:hover {
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); /* increased box-shadow on hover */
+        transform: scale(1.05); /* scale card on hover */
+    }
+
+    &.red {
+        color: red;
+    }
+    &.black {
+        color: black;
+    }
+
+    .rank {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 1.4em;
+        transform: translate(-50%, -50%);
+    }
+
+    .suit {
+        position: absolute;
+        font-size: 0.8em;
+        &.top {
+            top: 23px;
+            left: 2px;
+        }
+        &.bottom {
+            bottom: 23px;
+            right: 2px;
+        }
+    }
+}
