--- a/templates/card/deck_shuffle.html.twig
+++ b/templates/card/deck_shuffle.html.twig
@@ -32,6 +32,8 @@
 
     <br /><br />
 
+    <a class="button success" href="{{ path('card_deck_draw') }}">Draw Card</a>
+
     <a class="button primary" href="{{ path('card_deck_shuffle') }}">
         Shuffle Again
     </a>
