--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -20,7 +20,7 @@
 
     <p>
         Test the deck:
-        <a href="{{ path('card_deck') }}" class="button">Deck</a>
+        <a href="{{ path('card_deck') }}" class="button">Test Deck</a>
     </p>
 
     <style>
