--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -255,6 +255,15 @@ nav {
             background-color: #388e3c; /* Even darker green */
         }
     }
+    &:disabled {
+        opacity: 0.5;
+        pointer-events: none;
+        box-shadow: none;
+        background-color: #f5f5f5;
+        border-color: rgba(0, 0, 0, 0.15);
+        color: rgba(0, 0, 0, 0.5);
+        cursor: default;
+    }
 }
 
 input[type="number"] {
@@ -470,4 +479,31 @@ footer {
             left: 2px;
         }
     }
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-gap: 10px;
+}
+
+.card-column {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-gap: 5px;
+}
+
+.player-label {
+    font-size: 24px;
+    font-weight: bold;
+    grid-row: 1 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
 }
