--- a/templates/card/deck.html.twig
+++ b/templates/card/deck.html.twig
@@ -41,5 +41,5 @@
         Shuffle Deck
     </a>
 
-    <a class="button" href="{{ path('card_start') }}">Return to game</a>
+    <a class="button" href="{{ path('card_start') }}">Return to Start</a>
 {% endblock %}
