--- a/templates/card/deck_shuffle.html.twig
+++ b/templates/card/deck_shuffle.html.twig
@@ -32,11 +32,31 @@
 
     <br /><br />
 
-    <a class="button success" href="{{ path('card_deck_draw') }}">Draw Card</a>
+    <form action="{{ path('card_deck_deal_post') }}" method="post">
+        <label for="players">Number of Players:</label>
+        <input type="number"
+            name="players"
+            id="players"
+            value="{{ players }}"
+            min="1"
+            max="52" />
 
-    <a class="button primary" href="{{ path('card_deck_shuffle') }}">
-        Shuffle Again
-    </a>
+        <label for="cards">Number of Cards:</label>
+        <input type="number"
+            name="cards"
+            id="cards"
+            value="{{ cards }}"
+            min="1"
+            max="52" />
+        <br />
+        <input class="button primary" type="submit" value="Deal Cards" />
+        <a class="button success" href="{{ path('card_deck_draw') }}">
+            Draw a Card
+        </a>
 
-    <a class="button" href="{{ path('card_start') }}">Return to game</a>
+        <a class="button danger" href="{{ path('card_deck_shuffle') }}">
+            Shuffle Again
+        </a>
+        <a class="button" href="{{ path('card_start') }}">Return to Start</a>
+    </form>
 {% endblock %}
