--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -14,13 +14,8 @@
     </p>
 
     <p>
-        Start the Game: <a href="{{ path('card_init_get') }}" class="button primary">Play
+        Start the Game: <a href="{{ path('card_deck') }}" class="button primary">Play
             Game</a>
-    </p>
-
-    <p>
-        Test the deck:
-        <a href="{{ path('card_deck') }}" class="button">Test Deck</a>
     </p>
 
     <style>
