--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,12 +36,20 @@
                     <li><a href="{{ path('about') }}">About</a></li>
                     <li><a href="{{ path('report') }}">Report</a></li>
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
-                    <li><a href="{{ path('quote') }}">Quotes</a></li>
                     <li>
                         <div class="dropdown">
                             Games<div class="dropdown-content">
                                 <a href="{{ path('pig_start') }}">Pig</a>
                                 <a href="{{ path('card_start') }}">Card Game</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="dropdown">
+                            <a href="{{ path('api') }}">API</a>
+                            <div class="dropdown-content">
+                                <a href="{{ path('api_quote') }}">Quotes</a>
+                                <a href="{{ path('api_deck') }}">Deck</a>
                             </div>
                         </div>
                     </li>
