--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -95,23 +95,68 @@
             Kmom02
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            tristique felis dolor. Suspendisse accumsan tellus ac neque tempor
-            scelerisque. Duis dictum diam in nisl molestie vulputate. Donec
-            interdum odio vitae scelerisque blandit. Vestibulum enim dolor,
-            ornare at dui in, venenatis convallis sapien. Vestibulum ullamcorper
-            eu lectus quis lacinia. Praesent id fringilla ligula, ut tincidunt
-            purus. Fusce viverra metus ac lacinia eleifend. Morbi vehicula enim
-            eget est accumsan, ac porttitor justo iaculis.
+            <strong>
+                &bull; Förklara kort de objektorienterade konstruktionerna arv,
+                komposition, interface och trait och hur de används i PHP.
+            </strong><br /><br />
+
+            - Arv i PHP möjliggör att skapa nya klasser baserat på befintliga
+            klasser, vilket innebär att den nya klassen kommer att ärva
+            egenskaper och metoder från den befintliga klassen.
             <br /><br />
-            Morbi magna elit, commodo et nunc ac, malesuada mollis est. Quisque mattis
-            venenatis nunc, quis varius leo tristique eget. Sed non urna condimentum,
-            sagittis dui sed, pulvinar sapien. Aliquam vitae maximus metus. Phasellus
-            vitae ligula quam. Sed ac nisi quis massa rutrum vulputate. Duis eu convallis
-            libero. Pellentesque faucibus aliquet eros bibendum faucibus. Suspendisse
-            et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
-            Quisque in tincidunt urna, ut venenatis elit.
+            Komposition i PHP möjliggör att objekt kan innehålla andra objekt som
+            en del av sina egenskaper. Istället för att en klass utökas genom arv,
+            kan en klass samarbeta med andra objekt genom att de inkluderas som en
+            del av klassens egenskaper.
             <br /><br />
+            Interface i PHP är en slags kontrakt som kräver att en klass implementerar
+            vissa metoder och egenskaper. Det gör det möjligt att definiera ett gränssnitt
+            som flera klasser kan implementera på olika sätt.
+            <br /><br />
+            Trait i PHP är en slags återanvändbar kod som kan användas för att tillföra
+            funktionalitet till flera klasser utan att man behöver använda arv. Traits
+            kan inkluderas i klasser med hjälp av en "use" deklaration och gör det
+            möjligt att återanvända kod på ett smidigt sätt.
+
+            <br /><br /><br />
+
+            <strong>
+                &bull; Berätta om din implementation från uppgiften. Hur löste
+                du uppgiften, är du nöjd/missnöjd, vilken förbättringspotential
+                ser du i din koden och dina klasser?
+            </strong><br /><br />
+
+            - Jag tyckte att uppgiften var utmanande, men jag kände mig nöjd med
+            min implementation. Jag tror dock att det alltid finns utrymme för
+            förbättringar, särskilt i fråga om att göra koden mer DRY, öka
+            återanvändbarheten av klasser och göra den mer strukturerad.
+
+            <br /><br />
+            Jag tror också att jag skulle kunna lära mig mer om objektorienterad
+            programmering och implementera mer avancerade tekniker för att ytterligare
+            förbättra min kod.
+            <br /><br /><br />
+
+            <strong>
+                &bull; Vilka är dina reflektioner så här långt med att jobb i
+                Symfony med applikationskod enligt MVC?
+            </strong><br /><br />
+
+            - Jag har märkt att det känns bättre och bättre att arbeta i Symfony
+            och jag ser nyttan av att använda MVC-mönstret för att organisera
+            applikationskoden.
+            <br /><br />
+            Samtidigt föredrar jag vanligtvis att arbeta med JavaScript och dess
+            ramverk istället för PHP. Men jag ser definitivt värdet i att lära mig
+            Symfony och dess arkitektur.
+            <br /><br /><br />
+
+            <strong>
+                &bull; Vilken är din TIL för detta kmom?
+            </strong><br /><br />
+            - Jag har lärt mig att jobba med klasser och objekt i PHP.
+
+            <br /><br /><br />
         </p>
     </article>
 
@@ -120,23 +165,7 @@
             Kmom03
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            tristique felis dolor. Suspendisse accumsan tellus ac neque tempor
-            scelerisque. Duis dictum diam in nisl molestie vulputate. Donec
-            interdum odio vitae scelerisque blandit. Vestibulum enim dolor,
-            ornare at dui in, venenatis convallis sapien. Vestibulum ullamcorper
-            eu lectus quis lacinia. Praesent id fringilla ligula, ut tincidunt
-            purus. Fusce viverra metus ac lacinia eleifend. Morbi vehicula enim
-            eget est accumsan, ac porttitor justo iaculis.
-            <br /><br />
-            Morbi magna elit, commodo et nunc ac, malesuada mollis est. Quisque mattis
-            venenatis nunc, quis varius leo tristique eget. Sed non urna condimentum,
-            sagittis dui sed, pulvinar sapien. Aliquam vitae maximus metus. Phasellus
-            vitae ligula quam. Sed ac nisi quis massa rutrum vulputate. Duis eu convallis
-            libero. Pellentesque faucibus aliquet eros bibendum faucibus. Suspendisse
-            et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
-            Quisque in tincidunt urna, ut venenatis elit.
-            <br /><br />
+            text here
         </p>
     </article>
 
@@ -145,23 +174,7 @@
             Kmom04
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            tristique felis dolor. Suspendisse accumsan tellus ac neque tempor
-            scelerisque. Duis dictum diam in nisl molestie vulputate. Donec
-            interdum odio vitae scelerisque blandit. Vestibulum enim dolor,
-            ornare at dui in, venenatis convallis sapien. Vestibulum ullamcorper
-            eu lectus quis lacinia. Praesent id fringilla ligula, ut tincidunt
-            purus. Fusce viverra metus ac lacinia eleifend. Morbi vehicula enim
-            eget est accumsan, ac porttitor justo iaculis.
-            <br /><br />
-            Morbi magna elit, commodo et nunc ac, malesuada mollis est. Quisque mattis
-            venenatis nunc, quis varius leo tristique eget. Sed non urna condimentum,
-            sagittis dui sed, pulvinar sapien. Aliquam vitae maximus metus. Phasellus
-            vitae ligula quam. Sed ac nisi quis massa rutrum vulputate. Duis eu convallis
-            libero. Pellentesque faucibus aliquet eros bibendum faucibus. Suspendisse
-            et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
-            Quisque in tincidunt urna, ut venenatis elit.
-            <br /><br />
+            text here
         </p>
     </article>
 
@@ -170,23 +183,7 @@
             Kmom05
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            tristique felis dolor. Suspendisse accumsan tellus ac neque tempor
-            scelerisque. Duis dictum diam in nisl molestie vulputate. Donec
-            interdum odio vitae scelerisque blandit. Vestibulum enim dolor,
-            ornare at dui in, venenatis convallis sapien. Vestibulum ullamcorper
-            eu lectus quis lacinia. Praesent id fringilla ligula, ut tincidunt
-            purus. Fusce viverra metus ac lacinia eleifend. Morbi vehicula enim
-            eget est accumsan, ac porttitor justo iaculis.
-            <br /><br />
-            Morbi magna elit, commodo et nunc ac, malesuada mollis est. Quisque mattis
-            venenatis nunc, quis varius leo tristique eget. Sed non urna condimentum,
-            sagittis dui sed, pulvinar sapien. Aliquam vitae maximus metus. Phasellus
-            vitae ligula quam. Sed ac nisi quis massa rutrum vulputate. Duis eu convallis
-            libero. Pellentesque faucibus aliquet eros bibendum faucibus. Suspendisse
-            et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
-            Quisque in tincidunt urna, ut venenatis elit.
-            <br /><br />
+            text here
         </p>
     </article>
 
@@ -195,23 +192,7 @@
             Kmom06
         </h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
-            tristique felis dolor. Suspendisse accumsan tellus ac neque tempor
-            scelerisque. Duis dictum diam in nisl molestie vulputate. Donec
-            interdum odio vitae scelerisque blandit. Vestibulum enim dolor,
-            ornare at dui in, venenatis convallis sapien. Vestibulum ullamcorper
-            eu lectus quis lacinia. Praesent id fringilla ligula, ut tincidunt
-            purus. Fusce viverra metus ac lacinia eleifend. Morbi vehicula enim
-            eget est accumsan, ac porttitor justo iaculis.
-            <br /><br />
-            Morbi magna elit, commodo et nunc ac, malesuada mollis est. Quisque mattis
-            venenatis nunc, quis varius leo tristique eget. Sed non urna condimentum,
-            sagittis dui sed, pulvinar sapien. Aliquam vitae maximus metus. Phasellus
-            vitae ligula quam. Sed ac nisi quis massa rutrum vulputate. Duis eu convallis
-            libero. Pellentesque faucibus aliquet eros bibendum faucibus. Suspendisse
-            et dolor massa. Praesent quis malesuada lorem. Donec eu vestibulum ex.
-            Quisque in tincidunt urna, ut venenatis elit.
-            <br /><br />
+            text here
         </p>
     </article>
 {% endblock %}
