--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,8 @@
                     <li><a href="{{ path('lucky') }}">Lucky</a></li>
                     <li>
                         <div class="dropdown">
-                            Games<div class="dropdown-content">
+                            <a href="{{ path('games') }}">Games</a>
+                            <div class="dropdown-content">
                                 <a href="{{ path('pig_start') }}">Pig</a>
                                 <a href="{{ path('card_start') }}">Card Game</a>
                             </div>
